<resources>
    <string name="app_name">FF Settings</string>

    <string name="source_code_url" translatable="false">https://github.com/IbremMiner837/Garena-Free-Fire-Settings</string>
    <string name="ibragim_url" translatable="false">https://github.com/IbremMiner837</string>
    <string name="JVMFrog" translatable="false">https://vk.com/jvmfrog</string>
    <string name="GOOGLE_PLAY" translatable="false">https://play.google.com/store/apps/dev?id=8551876312630719902</string>
    <string name="google_form" translatable="false">https://forms.gle/pudK6cxwW8t4xdcTA</string>
    <string name="email" translatable="false">ibremminer837.dev@gmail.com</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-4193046598871025~2670224662</string>
    <string name="admob_interstellar_test_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_reward_test_ad_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_interstellar_ad_id" translatable="false">ca-app-pub-4193046598871025/7823313141</string>
    <string name="admob_app_open_ad_id" translatable="false">ca-app-pub-4193046598871025/7460189368</string>
    <string name="admob_app_open_test_ad_id" translatable="false">ca-app-pub-3940256099942544/3419835294</string>

    <string name="review">Review</string>
    <string name="collimator">Collimator</string>
    <string name="x2_scope">x2 Scope</string>
    <string name="x4_scope">x4 Scope</string>
    <string name="sniper_scope">Sniper Scope</string>
    <string name="free_review">Free Review</string>
    <string name="dpi">DPI</string>
    <string name="fire_button">Fire Button</string>
    <string name="source">Source:</string>

    <string name="dont_have_your_phone_model">Don\'t have your phone model?</string>
    <string name="then_click_here">Then click here</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="link">Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_link">Open Link</string>
    <string name="error">Error</string>

    <string name="about_app">About App</string>
    <string name="home">Home</string>
    <string name="version">Version</string>
    <string name="source_code">Source Code</string>
    <string name="ibragim">Ibragim Maltsagov</string>

    <string name="write_to_us">Write to us</string>
    <string name="feedback">Feedback</string>
    <string name="rate_the_app">Review the app</string>
    <string name="we_are_on_vk">We are on VK</string>
    <string name="other_apps">Other Apps</string>

    <string name="thank_for_review">Thank for review</string>

    <!--Accessibility-->
    <string name="copy_settings_button">Copy settings button</string>

    <!-- Preference Titles -->
    <string name="app_theme" translatable="false">App Theme</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="app_theme_title" translatable="false">Default App Theme</string>
    <string name="dynamic_colors_title" translatable="false">Dynamic Colors</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
</resources>