<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AboutAppFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_launcher_round"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="JVMFrog"
                            android:textSize="24sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/appVersionBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_info_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sourceCodeBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source_code"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_code_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ibragimBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ibragim"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_person_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mailBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/write_to_us"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_alternate_email_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/rateBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_the_app"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_rate_review_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/vkGroupBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_are_on_vk"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_public_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/otherAppsBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other_apps"
                        android:textSize="24sp"
                        app:icon="@drawable/ic_round_apps_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</FrameLayout>